# ccmux-ide

./: .env.example  .gitignore  .npmrc  CHANGELOG.md  LICENSE  README.md  next.config.ts  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json
.github/workflows/: build-windows.yml  deploy-site.yml  e2e.yml  release.yml
app/: globals.css  layout.tsx  page.tsx
app/(workspace)/: layout.tsx
app/(workspace)/workspace/: page.tsx
app/settings/: page.tsx
app/settings/mcp/: page.tsx
app/setup/: page.tsx
app/setup/done/: page.tsx
components/: icons.tsx  theme-provider.tsx
components/auth/: AuthPromptDialog.tsx
components/chat/: ActivityIndicator.tsx  AssistantMessage.tsx  AtMentionPicker.tsx  ChatPaneHeader.tsx  ChatPanel.tsx  ChatStatusIndicator.tsx  ClearSessionDialog.tsx  CodeBlock.tsx  DiffViewer.tsx  EffortPickerDialog.tsx  EffortPickerPopover.tsx  HelpDialog.tsx  ImagePasteZone.tsx  ImagePreviewDialog.tsx  ImageThumb.tsx  InputArea.tsx  MessageList.tsx  ModelPickerDialog.tsx  ModelPickerPopover.tsx  ToolDetailsToggle.tsx  ToolUseCard.tsx  ToolUseGroup.tsx  UserMessage.tsx
components/common/: SafeMonacoDiffEditor.tsx  SafeMonacoEditor.tsx
components/editor/: EditorPane.tsx  EditorPaneItem.tsx  EditorTabs.tsx  FileEditor.tsx  FileViewer.tsx  MarkdownPreview.tsx
components/inspector/: MemoryEditor.tsx  MemoryEditorPanel.tsx  MemoryTreeView.tsx  WorktreeDialog.tsx  WorktreeTabs.tsx
components/layout/: CLAUDE.md  Inspector.tsx  ProjectAccentColorPicker.tsx  ProjectRail.tsx  Shell.tsx  SplitView.tsx  StatusBar.tsx  TitleBar.tsx  VersionLabel.tsx
components/onboarding/: ApiKeyStep.tsx  BrandIntroStep.tsx  HelloBubble.tsx  PermissionsStep.tsx  SampleProjectStep.tsx  WelcomeWizard.tsx  WizardStep.tsx
components/palette/: CommandPalette.tsx  FilePalette.tsx  SearchPalette.tsx  SlashPalette.tsx
components/permission/: PermissionDialog.tsx
components/preview/: PreviewPane.tsx
components/providers/: EscapeProvider.tsx  PermissionProvider.tsx
components/settings/: AboutSection.tsx  ApiKeySettings.tsx  AppearanceSettings.tsx  BrowserAutomationSection.tsx  CLAUDE.md  KeybindingsSettings.tsx
components/sidebar/: ContextGauge.tsx  FilePreviewDialog.tsx  LocalServersPanel.tsx  ProjectSwitcher.tsx  ProjectTree.tsx  SessionList.tsx  Sidebar.tsx  SubAgentsList.tsx  TodosList.tsx  UsageStatsCard.tsx
components/terminal/: TerminalPane.tsx  TerminalPaneItem.tsx  TerminalView.tsx  terminal-reset-registry.ts
components/theme/: AppearanceInit.tsx  ThemeToggle.tsx
components/ui/: alert-dialog.tsx  badge.tsx  button.tsx  card.tsx  command.tsx  dialog.tsx  dropdown-menu.tsx  input.tsx  popover.tsx  progress.tsx  scroll-area.tsx  separator.tsx  skeleton.tsx  tabs.tsx  textarea.tsx  tooltip.tsx
components/updates/: CLAUDE.md  UpdateBadge.tsx  UpdateDialog.tsx  UpdateNotifier.tsx  UpdateNotifierBoundary.tsx
components/workspace/: SlotContainer.tsx  TrayBar.tsx  TrayContextBar.tsx  TrayEffortPicker.tsx  TrayModelPicker.tsx  TrayPermissionModePicker.tsx  WorkspaceView.tsx
docs/: m3-acceptance-criteria.md  release-checklist.md
docs/screenshots/: SCREENSHOTS-TODO.md  chat.png.placeholder  defender-bypass.png.placeholder  diff.png.placeholder  hero.png.placeholder  palette.png.placeholder  sidebar.png.placeholder
hooks/: use-toast.ts  useAllProjectsSidecarListener.ts  useClaudeMonitor.ts  useClaudeOAuthUsage.ts  useClaudeRateLimits.ts  useTerminalHydration.ts  useTerminalListener.ts  useUsageStats.ts
lib/: activity-indicator.ts  apply-accent.ts  builtin-slash.ts  detect-lang.ts  file-completion.ts  file-drag.ts  file-icon.ts  image-utils.ts  logger.ts  monaco-theme.ts  project-status.ts  sidecar-status.ts  tauri-api.ts  theme-presets.ts  tool-content-parser.ts  types.ts  url.ts  utils.ts
lib/hooks/: use-tooltip-suppress.ts
lib/stores/: chat.ts  claude-usage.ts  dialog.ts  editor.ts  file-tree-expanded.ts  monitor.ts  oauth-usage.ts  permission-requests.ts  preview-instances.ts  preview.ts  project.ts  purge-project.ts  session-order.ts  session-preferences.ts  session.ts  settings.ts  terminal-buffer.ts  terminal.ts  updater.ts  usage.ts  workspace-layout.ts  worktree.ts
lib/utils/: file.ts  markdown.ts  path.ts  platform.ts  project-colors.ts  semver.ts
public/sample-projects/node-hello/: README.md  index.js  package.json
public/sample-projects/python-hello/: README.md  main.py  pyproject.toml
sidecar/: build.mjs  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
sidecar/src/: agent.ts  index.ts
site/: .gitignore  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
site/app/: globals.css  layout.tsx  page.tsx
site/app/docs/: layout.tsx  page.tsx
site/app/docs/architecture/: page.tsx
site/app/docs/features/: page.tsx
site/app/docs/getting-started/: page.tsx
site/app/docs/keybindings/: page.tsx
site/components/: ClosingCTA.tsx  CompareTable.tsx  DocsLayout.tsx  DocsSidebar.tsx  FeaturesGrid.tsx  Footer.tsx  Hero.tsx  InstallGrid.tsx  Logo.tsx  SiteHeader.tsx  ThemeToggle.tsx  WhyPillars.tsx
site/public/brand/: BRAND.md  preview.html
site/scripts/: generate-icons.mjs
src-tauri/: CLAUDE.md  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md  icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: agent.rs  builtin_slash.rs  claude_usage.rs  cli_version.rs  config.rs  file_list.rs  fs_util.rs  history.rs  image_paste.rs  local_servers.rs  mcp.rs  memory_tree.rs  mod.rs  oauth_usage.rs  plugins.rs  preview.rs  pty.rs  search_fts.rs  skills.rs  slash.rs  usage.rs  worktree.rs
src-tauri/src/events/: mod.rs  monitor.rs
tests/e2e/: chat.spec.ts  command-palette.spec.ts  fixtures.ts  helpers.ts  image-paste.spec.ts  monaco-diff.spec.ts  preview-webview-window.spec.ts  search-palette.spec.ts  session-isolation.spec.ts  sessions.spec.ts  settings.spec.ts  setup-api-key.spec.ts  slash-palette.spec.ts  welcome.spec.ts
