[package]
name = "ccmux-ide"
version = "0.1.0"
description = "Japanese-first Claude Code desktop client"
edition = "2021"
license = "MIT"
authors = ["hironori-oi <ai-lab@improver.jp>"]
repository = "https://github.com/hironori-oi/ccmux-ide"
rust-version = "1.77"

[lib]
name = "ccmux_ide_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.1", features = [] }

[dependencies]
# --- Tauri 2.1 本体 ---
tauri = { version = "2.1", features = ["devtools"] }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-notification = "2"
# PM-283: GitHub Release の latest.json をポーリングし、署名なし updater で
# NSIS/MSI/DMG/AppImage/deb を自動更新する。pubkey "" のため署名検証は
# skip される（M3 MVP 許容、将来 DEC で Ed25519 鍵発行時に差し替え）。
tauri-plugin-updater = "2"

# --- Serde / async ---
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
# PRJ-012 Round A: claude_usage が `claude /usage` を spawn して TUI 出力を
# capture するため `process` (tokio::process::Command) と `time` (timeout) を追加。
# `io-util` は AsyncWriteExt::shutdown を child stdin に呼ぶために必要。
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "process", "time", "io-util"] }

# --- ccmux-ide 由来の資産 ---
arboard = "3.6"
image = { version = "0.25", default-features = false, features = ["png", "bmp"] }
keyring = "2"
notify = "6"
rusqlite = { version = "0.31", features = ["bundled"] }
similar = "2"
uuid = { version = "1", features = ["v4"] }
walkdir = "2"
time = { version = "0.3", features = ["formatting", "macros"] }
dirs = "5"
# PRJ-012 Stage B: ~/.claude/projects/**/*.jsonl の ISO8601 timestamp を DateTime<Utc>
# として parse し、5h / 7d window に振り分けるため chrono を追加。
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3"

[profile.release]
# v2 (DEC-017) で学んだ rustc ICE 対策: 当面 opt-level=0 を維持し、
# CI 側で opt-level=3 + lto=thin を再試行する。ローカル開発では差を体感しない。
opt-level = 0
# 以下は CI で有効化検討:
# lto = "thin"
# codegen-units = 1
# strip = true
